--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Lambda Function - Contact Us</title>
+    <script type="text/javascript" src="./script.js" > </script>
 </head>
 <body>
         <form id="contact-form" method="post">
